--- a/page2.html
+++ b/page2.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 
 <html>
+<style>
+.button {
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.button1 {background-color: #4CAF50;} /* Green */
+.button2 {background-color: #008CBA;} /* Blue */
+</style>
 
 <head>
 
@@ -3038,6 +3054,8 @@ usdataset %&gt;%
 <p>From this graph we could find there is around one third of population at age 90 is not Hispanic, while population at age 90 has about 1300000 are not Hispanic.</p>
 <div id="thanks-for-your-reading" class="section level2">
 <h2>Thanks for your reading!</h2>
+<button class="button button1", onclick="document.location.href=this.getAttribute('href');" href="./page3.html">Next Page</button>
+<button class="button button2", onclick="document.location.href=this.getAttribute('href');" href="./index.html">Last Page</button>
 </div>
 </div>
 
